@@ -1,5 +1,5 @@
 /*
- * $Id: hbdate.h,v 1.3 2003/01/19 21:44:02 andijahja Exp $
+ * $Id: hbdate.h,v 1.4 2003/11/30 12:32:29 druzus Exp $
  */
 
 /*
@@ -58,18 +58,18 @@
 HB_EXTERN_BEGIN
 
 extern double   HB_EXPORT hb_dateSeconds( void );
-extern void     HB_EXPORT hb_dateToday( long * plYear, long * plMonth, long * plDay );
+extern void     HB_EXPORT hb_dateToday( LONG * plYear, LONG * plMonth, LONG * plDay );
 extern void     HB_EXPORT hb_dateTimeStr( char * pszTime );
 extern char     HB_EXPORT * hb_dateCMonth( int iMonth );
 extern char     HB_EXPORT * hb_dateCDOW( int iDay );
-extern long     HB_EXPORT hb_dateDOW( long lYear, long lMonth, long lDay );
+extern LONG     HB_EXPORT hb_dateDOW( LONG lYear, LONG lMonth, LONG lDay );
 extern char     HB_EXPORT * hb_dateFormat( const char * szDate, char * szFormattedDate, const char * szDateFormat );
-extern long     HB_EXPORT hb_dateEncode( long lYear, long lMonth, long lDay );
-extern void     HB_EXPORT hb_dateDecode( long julian, long * plYear, long * plMonth, long * plDay );
-extern void     HB_EXPORT hb_dateStrPut( char * szDate, long lYear, long lMonth, long lDay );
-extern void     HB_EXPORT hb_dateStrGet( const char * szDate, long * plYear, long * plMonth, long * plDay );
-extern char     HB_EXPORT * hb_dateDecStr( char * szDate, long lJulian );
-extern long     HB_EXPORT hb_dateEncStr( char * szDate );
+extern LONG     HB_EXPORT hb_dateEncode( LONG lYear, LONG lMonth, LONG lDay );
+extern void     HB_EXPORT hb_dateDecode( LONG julian, LONG * plYear, LONG * plMonth, LONG * plDay );
+extern void     HB_EXPORT hb_dateStrPut( char * szDate, LONG lYear, LONG lMonth, LONG lDay );
+extern void     HB_EXPORT hb_dateStrGet( const char * szDate, LONG * plYear, LONG * plMonth, LONG * plDay );
+extern char     HB_EXPORT * hb_dateDecStr( char * szDate, LONG lJulian );
+extern LONG     HB_EXPORT hb_dateEncStr( char * szDate );
 
 HB_EXTERN_END
 
